--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -11,6 +11,7 @@
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-icons": "^3.7.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.0.1",
